# ontology

./: CMakeLists.txt  DOCKER_BUILD_FIX.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_STATUS.md  SEMANTIC_QUERY_README.md  TEST_FIX_SUMMARY.md  TIDY_CHECK_FIX_SUMMARY.md  build_and_test.sh  pyproject.toml  test_semantic_query.py  vcpkg.json
src/: quack_extension.cpp
src/include/: quack_extension.hpp
test/sql/: semantic_query.test
